--- a/plays.ipynb
+++ b/plays.ipynb
@@ -9,7 +9,7 @@
     "from pypokerengine.api.game import setup_config, start_poker\n",
     "from pypokerengine.players import BasePokerPlayer\n",
     "from baseline_players import RandomPlayer\n",
-    "from bots.honest_player import HonestPlayer\n",
+    "# from bots.honest_player import HonestPlayer\n",
     "# from baseline_players import HonestPlayer\n",
     "from bots.fish_player import FishPlayer\n",
     "from bots.fold_player import FoldPlayer\n",
@@ -26,34 +26,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_RANDOM_PLAYERS = 6\n",
+    "N_RANDOM_PLAYERS = 8\n",
     "\n",
     "config = setup_config(max_round=50, initial_stack=1500, small_blind_amount=15)\n",
     "config.register_player(name=\"fishman\", algorithm=FishPlayer())\n",
-    "config.register_player(name=\"foldman\", algorithm=FoldPlayer())\n",
-    "config.register_player(name=\"honest\", algorithm=HonestPlayer(150))\n",
+    "# config.register_player(name=\"foldman\", algorithm=FoldPlayer())\n",
+    "# config.register_player(name=\"honest\", algorithm=HonestPlayer(20))\n",
     "for i in range(N_RANDOM_PLAYERS):\n",
     "    config.register_player(name=\"random\" + str(i), algorithm=RandomPlayer())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [02:11<00:00,  3.70s/it]"
+      "100%|██████████| 2/2 [00:00<00:00,  8.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 8s, sys: 1.63 s, total: 2min 10s\n",
-      "Wall time: 2min 11s\n"
+      "CPU times: user 225 ms, sys: 4.36 ms, total: 230 ms\n",
+      "Wall time: 231 ms\n"
      ]
     },
     {
@@ -78,14 +78,14 @@
     "            \n",
     "    return pd.DataFrame(players_stack_dict)\n",
     "\n",
-    "res = get_all_results(config, n_games=30)\n",
+    "res = get_all_results(config, n_games=2)\n",
     "#3.4s/it 5:40 - my\n",
     "#5.9s/it 9:59 - base"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,111 +110,111 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>fishman</th>\n",
-       "      <th>foldman</th>\n",
-       "      <th>honest</th>\n",
        "      <th>random0</th>\n",
        "      <th>random1</th>\n",
        "      <th>random2</th>\n",
        "      <th>random3</th>\n",
        "      <th>random4</th>\n",
        "      <th>random5</th>\n",
+       "      <th>random6</th>\n",
+       "      <th>random7</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.00000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>8887.100000</td>\n",
-       "      <td>723.00000</td>\n",
-       "      <td>71.700000</td>\n",
+       "      <td>13424.500000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1240.600000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1262.500000</td>\n",
-       "      <td>1256.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>6138.407529</td>\n",
-       "      <td>187.32325</td>\n",
-       "      <td>166.186007</td>\n",
+       "      <td>28.991378</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3923.121665</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3992.375546</td>\n",
-       "      <td>3971.820741</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>510.00000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>13404.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>3028.000000</td>\n",
-       "      <td>540.00000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>13414.250000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>12553.500000</td>\n",
-       "      <td>765.00000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>13424.500000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>12897.750000</td>\n",
-       "      <td>847.50000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>13434.750000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>12950.000000</td>\n",
-       "      <td>1020.00000</td>\n",
-       "      <td>505.000000</td>\n",
+       "      <td>13445.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12406.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12625.000000</td>\n",
-       "      <td>12560.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -222,28 +222,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            fishman     foldman      honest  random0       random1  random2  \\\n",
-       "count     10.000000    10.00000   10.000000     10.0     10.000000     10.0   \n",
-       "mean    8887.100000   723.00000   71.700000      0.0   1240.600000      0.0   \n",
-       "std     6138.407529   187.32325  166.186007      0.0   3923.121665      0.0   \n",
-       "min        0.000000   510.00000    0.000000      0.0      0.000000      0.0   \n",
-       "25%     3028.000000   540.00000    0.000000      0.0      0.000000      0.0   \n",
-       "50%    12553.500000   765.00000    0.000000      0.0      0.000000      0.0   \n",
-       "75%    12897.750000   847.50000    0.000000      0.0      0.000000      0.0   \n",
-       "max    12950.000000  1020.00000  505.000000      0.0  12406.000000      0.0   \n",
+       "            fishman  random0  random1  random2  random3  random4  random5  \\\n",
+       "count      2.000000      2.0      2.0      2.0      2.0      2.0      2.0   \n",
+       "mean   13424.500000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "std       28.991378      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "min    13404.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "25%    13414.250000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "50%    13424.500000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "75%    13434.750000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "max    13445.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
        "\n",
-       "            random3       random4  random5  \n",
-       "count     10.000000     10.000000     10.0  \n",
-       "mean    1262.500000   1256.000000      0.0  \n",
-       "std     3992.375546   3971.820741      0.0  \n",
-       "min        0.000000      0.000000      0.0  \n",
-       "25%        0.000000      0.000000      0.0  \n",
-       "50%        0.000000      0.000000      0.0  \n",
-       "75%        0.000000      0.000000      0.0  \n",
-       "max    12625.000000  12560.000000      0.0  "
+       "       random6  random7  \n",
+       "count      2.0      2.0  \n",
+       "mean       0.0      0.0  \n",
+       "std        0.0      0.0  \n",
+       "min        0.0      0.0  \n",
+       "25%        0.0      0.0  \n",
+       "50%        0.0      0.0  \n",
+       "75%        0.0      0.0  \n",
+       "max        0.0      0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
