--- a/plays_for_RL.ipynb
+++ b/plays_for_RL.ipynb
@@ -125,16 +125,234 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n",
-      "action fold, amount 0\n"
+      "action call, amount 1500\n",
+      "9 [('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>1', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>2', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>3', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>4', 0), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>5', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>6', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>7', 0), ('RL', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>8', 13482)]\n",
+      "action raise, amount 1500\n",
+      "action raise, amount 6015\n",
+      "action raise, amount 6090\n",
+      "action raise, amount 6135\n",
+      "action raise, amount 6150\n",
+      "action raise, amount 8523\n",
+      "action raise, amount 8598\n",
+      "action raise, amount 8643\n",
+      "action raise, amount 8688\n",
+      "action raise, amount 8703\n",
+      "action raise, amount 9127\n",
+      "action raise, amount 9232\n",
+      "action raise, amount 9277\n",
+      "action raise, amount 9322\n",
+      "action raise, amount 9337\n",
+      "action raise, amount 9431\n",
+      "action raise, amount 9476\n",
+      "action raise, amount 9521\n",
+      "action raise, amount 9566\n",
+      "action raise, amount 9581\n",
+      "action raise, amount 9645\n",
+      "action raise, amount 9690\n",
+      "action raise, amount 9735\n",
+      "action raise, amount 9780\n",
+      "action raise, amount 9825\n",
+      "action raise, amount 9870\n",
+      "action raise, amount 9915\n",
+      "action raise, amount 9960\n",
+      "action raise, amount 10125\n",
+      "action raise, amount 10170\n",
+      "action raise, amount 10215\n",
+      "action raise, amount 10260\n",
+      "action raise, amount 10305\n",
+      "action raise, amount 11490\n",
+      "action raise, amount 11505\n",
+      "action raise, amount 11655\n",
+      "action raise, amount 11700\n",
+      "action raise, amount 11745\n",
+      "action raise, amount 11790\n",
+      "action raise, amount 11835\n",
+      "action raise, amount 11880\n",
+      "action raise, amount 11895\n",
+      "action raise, amount 11940\n",
+      "action raise, amount 11985\n",
+      "9 [('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>1', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>2', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>3', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>4', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>6', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>7', 0), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>8', 705), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>5', 765), ('RL', 12030)]\n",
+      "action raise, amount 1500\n",
+      "9 [('<baseline_players.RandomPlayer object at 0x11ecd4e80>1', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>2', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>3', 0), ('RL', 0), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>5', 1275), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>6', 1494), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>9', 2251), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>7', 2535), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>8', 5933)]\n",
+      "action raise, amount 1500\n",
+      "action raise, amount 3105\n",
+      "action raise, amount 3150\n",
+      "action raise, amount 3195\n",
+      "action raise, amount 3240\n",
+      "action raise, amount 3255\n",
+      "action raise, amount 4075\n",
+      "action raise, amount 4616\n",
+      "action raise, amount 4721\n",
+      "action raise, amount 6191\n",
+      "action raise, amount 4736\n",
+      "action raise, amount 6146\n",
+      "action raise, amount 6275\n",
+      "action raise, amount 6430\n",
+      "action raise, amount 60\n",
+      "action raise, amount 6415\n",
+      "action raise, amount 6580\n",
+      "action raise, amount 6625\n",
+      "action raise, amount 6670\n",
+      "action raise, amount 6715\n",
+      "action raise, amount 6760\n",
+      "action raise, amount 6805\n",
+      "action raise, amount 60\n",
+      "action raise, amount 6790\n",
+      "action raise, amount 6925\n",
+      "action raise, amount 9790\n",
+      "action raise, amount 9835\n",
+      "action raise, amount 9880\n",
+      "action raise, amount 9895\n",
+      "action raise, amount 9955\n",
+      "action raise, amount 10000\n",
+      "action raise, amount 10045\n",
+      "action raise, amount 10060\n",
+      "action raise, amount 10105\n",
+      "action raise, amount 10210\n",
+      "action raise, amount 10255\n",
+      "action raise, amount 10270\n",
+      "action raise, amount 10330\n",
+      "action raise, amount 10375\n",
+      "action raise, amount 10420\n",
+      "action raise, amount 10435\n",
+      "action raise, amount 10570\n",
+      "action raise, amount 10615\n",
+      "action raise, amount 10660\n",
+      "action raise, amount 10705\n",
+      "action raise, amount 10750\n",
+      "action raise, amount 10795\n",
+      "9 [('<baseline_players.RandomPlayer object at 0x11ecd4e80>2', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>3', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>5', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>6', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>7', 0), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>8', 800), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>4', 915), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>1', 930), ('RL', 10855)]\n",
+      "action raise, amount 1500\n",
+      "9 [('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>1', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>3', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>4', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>8', 0), ('RL', 0), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>7', 60), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>6', 1035), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>5', 1140), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>2', 11265)]\n",
+      "action raise, amount 1500\n",
+      "action raise, amount 3015\n",
+      "action raise, amount 1530\n",
+      "action raise, amount 1575\n",
+      "action raise, amount 60\n",
+      "action raise, amount 15\n",
+      "9 [('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>1', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>3', 0), ('RL', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>5', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>9', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>2', 1305), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>8', 1680), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>7', 3225), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>6', 7275)]\n",
+      "action raise, amount 1500\n",
+      "action raise, amount 6030\n",
+      "action raise, amount 4500\n",
+      "action raise, amount 5149\n",
+      "action raise, amount 3664\n",
+      "action raise, amount 4488\n",
+      "action raise, amount 4611\n",
+      "action raise, amount 1611\n",
+      "action raise, amount 1656\n",
+      "action raise, amount 1701\n",
+      "action raise, amount 1746\n",
+      "action raise, amount 895\n",
+      "action raise, amount 1836\n",
+      "action raise, amount 1881\n",
+      "action raise, amount 1926\n",
+      "action raise, amount 1971\n",
+      "action raise, amount 2016\n",
+      "action raise, amount 651\n",
+      "action raise, amount 696\n",
+      "9 [('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>1', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>2', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>4', 0), ('RL', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>9', 0), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>3', 1290), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>7', 2244), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>8', 2640), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>5', 7317)]\n",
+      "action raise, amount 1470\n",
+      "action call, amount 1500\n",
+      "9 [('<baseline_players.RandomPlayer object at 0x11ecd4e80>1', 0), ('RL', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>4', 0), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>5', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>6', 0), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>7', 0), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>2', 990), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>8', 1657), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>9', 10852)]\n",
+      "action raise, amount 1500\n",
+      "action raise, amount 9000\n",
+      "action raise, amount 10500\n",
+      "action raise, amount 10545\n",
+      "action raise, amount 10590\n",
+      "action raise, amount 10665\n",
+      "action raise, amount 10710\n",
+      "action raise, amount 10755\n",
+      "action raise, amount 10800\n",
+      "action raise, amount 10875\n",
+      "action raise, amount 10920\n",
+      "action raise, amount 10965\n",
+      "action raise, amount 10980\n",
+      "action raise, amount 11025\n",
+      "action raise, amount 11100\n",
+      "action raise, amount 11145\n",
+      "action raise, amount 11190\n",
+      "action raise, amount 11235\n",
+      "action raise, amount 11280\n",
+      "action raise, amount 11325\n",
+      "action raise, amount 11370\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "action raise, amount 11415\n",
+      "action raise, amount 11460\n",
+      "action raise, amount 11505\n",
+      "action raise, amount 11580\n",
+      "action raise, amount 11625\n",
+      "action raise, amount 11670\n",
+      "action raise, amount 11715\n",
+      "action raise, amount 11760\n",
+      "action raise, amount 11805\n",
+      "action raise, amount 11880\n",
+      "action raise, amount 11925\n",
+      "action raise, amount 11970\n",
+      "action raise, amount 12015\n",
+      "action raise, amount 12060\n",
+      "action raise, amount 12075\n",
+      "9 [('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>1', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>2', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>3', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>7', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>8', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>9', 0), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>4', 585), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>6', 780), ('RL', 12135)]\n",
+      "action raise, amount 1500\n",
+      "9 [('RL', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>2', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>3', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>4', 0), ('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>5', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>6', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>7', 0), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>9', 0), ('<bots.fish_player.FishPlayer object at 0x11ecd4ef0>8', 13500)]\n",
+      "action raise, amount 1500\n",
+      "9 [('RL', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>2', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>3', 0), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>4', 0), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>5', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>6', 0), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>7', 495), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>9', 1489), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>8', 11498)]\n",
+      "action raise, amount 1500\n",
+      "action raise, amount 3803\n",
+      "action raise, amount 3848\n",
+      "action raise, amount 3893\n",
+      "action raise, amount 60\n",
+      "action raise, amount 2333\n",
+      "action raise, amount 2707\n",
+      "action call, amount 1207\n",
+      "action raise, amount 4786\n",
+      "action raise, amount 4831\n",
+      "action raise, amount 3708\n",
+      "action raise, amount 3753\n",
+      "action raise, amount 3798\n",
+      "action raise, amount 6089\n",
+      "action raise, amount 6580\n",
+      "action raise, amount 6625\n",
+      "action raise, amount 6670\n",
+      "action call, amount 30\n",
+      "action raise, amount 6685\n",
+      "action raise, amount 7018\n",
+      "action raise, amount 4712\n",
+      "action raise, amount 4757\n",
+      "action raise, amount 4802\n",
+      "action raise, amount 4847\n",
+      "action raise, amount 9459\n",
+      "action raise, amount 9504\n",
+      "action raise, amount 9549\n",
+      "action raise, amount 9594\n",
+      "action raise, amount 8304\n",
+      "action raise, amount 8349\n",
+      "action raise, amount 8364\n",
+      "action raise, amount 8424\n",
+      "action raise, amount 8469\n",
+      "action raise, amount 8514\n",
+      "action raise, amount 8559\n",
+      "action raise, amount 8604\n",
+      "action raise, amount 8649\n",
+      "action raise, amount 8694\n",
+      "action raise, amount 8739\n",
+      "action raise, amount 8784\n",
+      "action raise, amount 8829\n",
+      "action raise, amount 8904\n",
+      "action raise, amount 8949\n",
+      "action raise, amount 8994\n",
+      "action raise, amount 9039\n",
+      "action raise, amount 9084\n",
+      "9 [('<baseline_players.RandomPlayer object at 0x11ecd4e80>2', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>3', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>5', 0), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>7', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>9', 0), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>6', 825), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>8', 1035), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>4', 2490), ('RL', 9129)]\n",
+      "action raise, amount 1500\n",
+      "9 [('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>3', 0), ('RL', 0), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>8', 0), ('<bots.forl_condition_bot.HonestStatPlayer object at 0x11ece8080>5', 75), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>9', 1350), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>4', 1500), ('<bots.honest_modified_player.HonestModifiedPlayer object at 0x11ecd4f60>2', 2895), ('<bots.botDenis.GloomCha object at 0x11ecd4fd0>6', 2985), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>1', 4695)]\n",
+      "action call, amount 1500\n",
+      "9 [('<bots.honest_player.HonestPlayer object at 0x11ecd4eb8>3', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>5', 0), ('RL', 0), ('<bots.forl_condition_bot_2.ConditionPlayer object at 0x11ecd4f98>8', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>9', 0), ('<baseline_players.RandomPlayer object at 0x11ecd4e80>1', 659), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>2', 930), ('<bots.bot1.KoffaPlayer object at 0x11ece8048>4', 1290), ('<bots.bot_denis_2.BotDenisPlayer object at 0x11ecd4f28>6', 10590)]\n",
+      "action raise, amount 1500\n"
      ]
     }
    ],
@@ -160,31 +378,31 @@
     "    players = humans + rlbots + [None]\n",
     "    np.random.shuffle(players)\n",
     "#     print(players)\n",
-    "    i = 0\n",
+    "    j = 0\n",
     "    for player in players:\n",
-    "        i += 1\n",
+    "        j += 1\n",
     "        if player is None:\n",
     "            RLP =  RLPokerPlayer(\n",
     "                study_mode=True,\n",
     "                model_file=in_model_file,\n",
-    "                gammaReward=0.1,\n",
-    "                alphaUpdateNet=0.5,\n",
+    "                gammaReward=0.5,\n",
+    "                alphaUpdateNet=0.1,\n",
     "                epsilonRandom=0.1,\n",
-    "                decayRandom=0.9,\n",
+    "                decayRandom=0.95,\n",
     "                players=players,\n",
     "                max_history_len=1000,\n",
     "                new_model_file=out_model_file,\n",
     "            )\n",
     "            config.register_player(name='RL',algorithm=RLP)    \n",
     "        else:\n",
-    "            config.register_player(name=str(player) + str(i), algorithm=player)\n",
+    "            config.register_player(name=str(player) + str(j), algorithm=player)\n",
     "    info = start_poker(config, verbose=0)\n",
     "    RLP.study_mode = False\n",
     "    res = []\n",
     "    for player_info in info['players']:\n",
     "        res.append((player_info['name'], player_info['stack']))\n",
     "    res = sorted(res, key=(lambda x:x[1]))\n",
-    "    print(res)"
+    "    print(i, res)"
    ]
   },
   {
