--- a/plays_for_RL.ipynb
+++ b/plays_for_RL.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
+     "ename": "SyntaxError",
+     "evalue": "Non-ASCII character '\\xd0' in file bots/botDenis.py on line 1, but no encoding declared; see http://python.org/dev/peps/pep-0263/ for details (botDenis.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"bots/botDenis.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    import sys #импортируем библиотеку sys\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m Non-ASCII character '\\xd0' in file bots/botDenis.py on line 1, but no encoding declared; see http://python.org/dev/peps/pep-0263/ for details\n"
      ]
     }
    ],
    "source": [
+    "from copy import deepcopy\n",
+    "import scipy.stats as sps\n",
+    "import keras.backend as K\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from bots.RLbot import RLPokerPlayer\n",
+    "from tqdm import tqdm\n",
     "from pypokerengine.api.game import setup_config, start_poker\n",
     "from pypokerengine.utils.card_utils import gen_cards\n",
     "from pypokerengine.players import BasePokerPlayer\n",
@@ -23,21 +34,12 @@
     "from bots.bot_denis_2 import BotDenisPlayer\n",
     "from bots.bot1 import KoffaPlayer\n",
     "from bots.bestbot import BestPlayer\n",
-    "# from bots.bot_denis_4 import \n",
     "from bots.forl_condition_bot_2 import ConditionPlayer\n",
     "from bots.botDenis import GloomCha\n",
     "from bots.forl_condition_bot import HonestStatPlayer\n",
     "from bots.fish_player import FishPlayer\n",
     "from bots.fold_player import FoldPlayer\n",
     "from bots.bot_denis_3 import BotDenis3Player\n",
-    "from copy import deepcopy\n",
-    "import scipy.stats as sps\n",
-    "import keras.backend as K\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from bots.RLbot import RLPokerPlayer\n",
-    "from tqdm import tqdm\n",
     "%matplotlib inline"
    ]
   },
@@ -62,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# N_RANDOM_PLAYERS = 0\n",
@@ -87,6 +91,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -119,6 +124,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -342,21 +348,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
